add CRAN version and downloads badges

--- a/README.Rmd
+++ b/README.Rmd
@@ -6,6 +6,9 @@ Convenience functions that let you easily do seasonal adjustment on the fly with
 Depends on the [`seasonal` package](https://cran.r-project.org/web/packages/seasonal/index.html) to give you access to X13-SEATS-ARIMA.
 
 [![Travis-CI Build Status](https://travis-ci.org/ellisp/ggseas.svg?branch=master)](https://travis-ci.org/ellisp/ggseas)
+[![CRAN version](http://www.r-pkg.org/badges/version/ggseas)](http://www.r-pkg.org/pkg/ggseas)
+[![CRAN RStudio mirror downloads](http://cranlogs.r-pkg.org/badges/ggseas)](http://www.r-pkg.org/pkg/ggseas)
+
 
 ## Installation
 Install the stable version the usual way from CRAN:
