Minor improvements to documentation

--- a/pkg/vignettes/ggsdc.Rmd
+++ b/pkg/vignettes/ggsdc.Rmd
@@ -4,7 +4,7 @@ author: "Peter Ellis"
 date: "`r Sys.Date()`"
 output: rmarkdown::html_vignette
 vignette: >
-  %\VignetteIndexEntry{Vignette Title}
+  %\VignetteIndexEntry{ggsdc - seasonal decomposition on the fly}
   %\VignetteEngine{knitr::rmarkdown}
   %\VignetteEncoding{UTF-8}
 ---
