--- a/pkg/vignettes/ggseas.Rmd
+++ b/pkg/vignettes/ggseas.Rmd
@@ -4,7 +4,7 @@ author: "Peter Ellis"
 date: "`r Sys.Date()`"
 output: rmarkdown::html_vignette
 vignette: >
-  %\VignetteIndexEntry{ggsdc - seasonal decomposition on the fly}
+  %\VignetteIndexEntry{ggseas - seasonal decomposition on the fly}
   %\VignetteEngine{knitr::rmarkdown}
   %\VignetteEncoding{UTF-8}
 ---
